completed all with existing test